--- a/crypto/index.html
+++ b/crypto/index.html
@@ -859,7 +859,7 @@
                         <div class="footer-content text-center">
                             <div class="footer-copyright-text">
                                 <p>Crypto © 2021</p>
-                                <p>Designed by Cute Themes.</p>
+                                <p>Designed by Maruf.</p>
                             </div>
                         </div>
                     </div>
