--- a/cryptonian/index.html
+++ b/cryptonian/index.html
@@ -858,7 +858,7 @@
                 <div class="footer-bottom">
                     <div class="row">
                         <div class="col-md-8">
-                            <p class="mb-0">© Cryptonian all Rights Reserved. Theme by <a href="#" title="TemplatesCoder">TemplatesCoder</a></p>
+                            <p class="mb-0">© Cryptonian all Rights Reserved. Theme by <a href="https://www.fiverr.com/marufjisan" title="MarufIslam">Maruf Islam</a></p>
                         </div>
                         <div class="col-md-4">
                             <div class="social-media">
