--- a/cryptorius/Dark Home/index.html
+++ b/cryptorius/Dark Home/index.html
@@ -753,7 +753,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xl-8 col-lg-8 col-md-9 order-r-2">
-                        <p>&#9400; Cryptorius all Rights Reserved. Designed By <a href="#">TemplatesCoder.com</a></p>
+                        <p>&#9400; Cryptorius all Rights Reserved. Designed By <a href="https://www.fiverr.com/marufjisan">Maruf Jisan</a></p>
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-3 order-r-1">
                         <ul>
